--- a/index.html
+++ b/index.html
@@ -13,11 +13,15 @@
       <div class="nav-bar"></div>
 
       <div class="cart">Cart({{ cart }})</div>
-      
+
       <div class="product-display">
         <div class="product-container">
           <div class="product-image">
-            <img :src="image" :alt="description" />
+            <img
+              :src="image"
+              :alt="description"
+              :class="{ 'out-of-stock-img': !inStock }"
+            />
           </div>
           <div class="product-info">
             <h1>{{ product }}</h1>
@@ -29,12 +33,32 @@
             <ul>
               <li v-for="detail in details">{{ detail }}</li>
             </ul>
-            <div v-for="variant in variants" :key="variant.id" @mouseover="updateImage(variant.image)">{{ variant.color }}</div>
+            <div
+              v-for="variant in variants"
+              :key="variant.id"
+              @mouseover="updateImage(variant.image)"
+              class="color-circle"
+              :style="{ backgroundColor: variant.color }"
+            ></div>
             <ul>
               <li v-for="size in sizes" :key="size">{{ size }}</li>
             </ul>
-            <button class="button" @click="addToCart">Add to Cart</button>
-            <button class="button" @click="removeFromCart">Remove</button>
+            <button
+              class="button"
+              :disabled="!inStock"
+              :class="{ disabledButton: !inStock }"
+              @click="addToCart"
+            >
+              Add to Cart
+            </button>
+            <button
+              class="button"
+              :disabled="cart <= 0"
+              :class="{ disabledButton: cart <= 0 }"
+              @click="removeFromCart"
+            >
+              Remove
+            </button>
           </div>
         </div>
       </div>
@@ -45,7 +69,7 @@
 
     <!-- Mount App -->
     <script>
-      const mountedApp = app.mount('#app')
+      const mountedApp = app.mount("#app");
     </script>
   </body>
 </html>
