--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             />
           </div>
           <div class="product-info">
-            <h1>{{ product }}</h1>
-            <p v-show="onSale">On Sale</p>
+            <h1>{{ title }}</h1>
+            <p v-show="onSale">{{ onSaleMsg }}</p>
             <p><a :href="url">{{ description }}</a></p>
             <p v-if="inventory > 10">In Stock</p>
             <p v-else-if="inventory <= 10 && inventory > 0">Almost sold out!</p>
@@ -34,9 +34,9 @@
               <li v-for="detail in details">{{ detail }}</li>
             </ul>
             <div
-              v-for="variant in variants"
+              v-for="(variant, index) in variants"
               :key="variant.id"
-              @mouseover="updateImage(variant.image)"
+              @mouseover="updateVariant(index)"
               class="color-circle"
               :style="{ backgroundColor: variant.color }"
             ></div>
